New avatar photos

--- a/src/pages/gFeed.html
+++ b/src/pages/gFeed.html
@@ -40,15 +40,18 @@
                     <div class="row">
                         <div class="col-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
-                                <div class="photo-container"></div>
+                                <div class="photo-container">
+                                    <img style="width: 250px;
+                                    height: 250px;" src="../../public/img/1.jpeg" alt="">
+                                </div>
                                 <div id="profile">
-                                    <h2 id="name"><span id="avatar">U</span> Unknown name</h2>
+                                    <h2 id="name"><span id="avatar">J</span> Jett</h2>
                                     <p class="card-text">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
                                     </p>
                                     <div class="card-footer">
                                         <i style="font-size: 20px;" class="fa-solid fa-heart"></i>
-                                        <p id="heart-number">123</p>
+                                        <p id="heart-number">430</p>
                                         <p id="date-time">4:56 pm 01/04/2018</p>
                                     </div>
                                 </div>
@@ -56,49 +59,18 @@
                         </div>
                         <div class="col-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
-                                <div class="photo-container"></div>
-                                <div id="profile">
-                                    <h2 id="name"><span id="avatar">U</span> Unknown name</h2>
-                                    <p class="card-text">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
-                                    </p>
-                                    <div class="card-footer">
-                                        <i style="font-size: 20px;" class="fa-solid fa-heart"></i>
-                                        <p id="heart-number">123</p>
-                                        <p id="date-time">4:56 pm 01/04/2018</p>
-                                    </div>
+                                <div class="photo-container">
+                                    <img style="width: 250px;
+                                    height: 250px;" src="../../public/img/2.jpeg" alt="">
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6 my-2">
-                            <div id="card" class="container-fluid d-flex justify-content-around">
-                                <div class="photo-container"></div>
                                 <div id="profile">
-                                    <h2 id="name"><span id="avatar">U</span> Unknown name</h2>
+                                    <h2 id="name"><span id="avatar">O</span> Omen</h2>
                                     <p class="card-text">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
                                     </p>
                                     <div class="card-footer">
                                         <i style="font-size: 20px;" class="fa-solid fa-heart"></i>
-                                        <p id="heart-number">123</p>
-                                        <p id="date-time">4:56 pm 01/04/2018</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 my-2">
-                            <div id="card" class="container-fluid d-flex justify-content-around">
-                                <div class="photo-container"></div>
-                                <div id="profile">
-                                    <h2 id="name"><span id="avatar">U</span> Unknown name</h2>
-                                    <p class="card-text">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
-                                    </p>
-                                    <div class="card-footer">
-                                        <i style="font-size: 20px;" class="fa-solid fa-heart"></i>
-                                        <p id="heart-number">123</p>
+                                        <p id="heart-number">230</p>
                                         <p id="date-time">4:56 pm 01/04/2018</p>
                                     </div>
                                 </div>
@@ -108,15 +80,18 @@
                     <div class="row">
                         <div class="col-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
-                                <div class="photo-container"></div>
+                                <div class="photo-container">
+                                    <img style="width: 250px;
+                                    height: 250px;" src="../../public/img/3.jpeg" alt="">
+                                </div>
                                 <div id="profile">
-                                    <h2 id="name"><span id="avatar">U</span> Unknown name</h2>
+                                    <h2 id="name"><span id="avatar">P</span> Phoenix</h2>
                                     <p class="card-text">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
                                     </p>
                                     <div class="card-footer">
                                         <i style="font-size: 20px;" class="fa-solid fa-heart"></i>
-                                        <p id="heart-number">123</p>
+                                        <p id="heart-number">70</p>
                                         <p id="date-time">4:56 pm 01/04/2018</p>
                                     </div>
                                 </div>
@@ -124,15 +99,58 @@
                         </div>
                         <div class="col-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
-                                <div class="photo-container"></div>
+                                <div class="photo-container">
+                                    <img style="width: 250px;
+                                    height: 250px;" src="../../public/img/4.jpeg" alt="">
+                                </div>
                                 <div id="profile">
-                                    <h2 id="name"><span id="avatar">U</span> Unknown name</h2>
+                                    <h2 id="name"><span id="avatar">Y</span> Yoru</h2>
                                     <p class="card-text">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
                                     </p>
                                     <div class="card-footer">
                                         <i style="font-size: 20px;" class="fa-solid fa-heart"></i>
-                                        <p id="heart-number">123</p>
+                                        <p id="heart-number">469</p>
+                                        <p id="date-time">4:56 pm 01/04/2018</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 my-2">
+                            <div id="card" class="container-fluid d-flex justify-content-around">
+                                <div class="photo-container">
+                                    <img style="width: 250px;
+                                    height: 250px;" src="../../public/img/5.jpeg" alt="sova">
+                                </div>
+                                <div id="profile">
+                                    <h2 id="name"><span id="avatar">S</span> Sova</h2>
+                                    <p class="card-text">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
+                                    </p>
+                                    <div class="card-footer">
+                                        <i style="font-size: 20px;" class="fa-solid fa-heart"></i>
+                                        <p id="heart-number">100</p>
+                                        <p id="date-time">4:56 pm 01/04/2018</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 my-2">
+                            <div id="card" class="container-fluid d-flex justify-content-around">
+                                <div class="photo-container">
+                                    <img style="width: 250px;
+                                    height: 250px;" src="../../public/img/6.jpeg" alt="sage">
+                                </div>
+                                <div id="profile">
+                                    <h2 id="name"><span id="avatar">S</span> Sage</h2>
+                                    <p class="card-text">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
+                                    </p>
+                                    <div class="card-footer">
+                                        <i style="font-size: 20px;" class="fa-solid fa-heart"></i>
+                                        <p id="heart-number">400</p>
                                         <p id="date-time">4:56 pm 01/04/2018</p>
                                     </div>
                                 </div>
