--- a/src/pages/gFeed.html
+++ b/src/pages/gFeed.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="main_bg" class="container-fluid">
-        <nav class="navbar navbar-dark navbar-expand-lg">
+        <nav id="nav-guest" class="navbar navbar-dark navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="#">Fotobook</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,6 +26,17 @@
                 <a class="login" href="login.html">Login</a>
             </div>
         </nav>
+        <!-- <nav id="nav-user" class="navbar navbar-dark navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand logo" href="#">Fotobook</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <input id="search" class="form-control me-2" type="search" placeholder="Search Photo / Album" aria-label="Search">
+                <h2 id="user-name"><span id="avatar">O</span> Omen</h2>
+                <a class="login" href="login.html">Logout</a>
+            </div>
+        </nav> -->
         <div id="feed" class="container">
             <ul class="nav nav-pills mt-3 justify-content-center" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
@@ -38,11 +49,10 @@
               <div class="tab-content p-2" id="pills-tabContent">
                 <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                     <div class="row">
-                        <div class="col-6 my-2">
+                        <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img style="width: 250px;
-                                    height: 250px;" src="../../public/img/1.jpeg" alt="">
+                                    <img src="../../public/img/1.jpeg" alt="">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">J</span> Jett</h2>
@@ -57,11 +67,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 my-2">
+                        <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img style="width: 250px;
-                                    height: 250px;" src="../../public/img/2.jpeg" alt="">
+                                    <img src="../../public/img/2.jpeg" alt="">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">O</span> Omen</h2>
@@ -78,11 +87,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6 my-2">
+                        <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img style="width: 250px;
-                                    height: 250px;" src="../../public/img/3.jpeg" alt="">
+                                    <img src="../../public/img/3.jpeg" alt="">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">P</span> Phoenix</h2>
@@ -97,11 +105,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 my-2">
+                        <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img style="width: 250px;
-                                    height: 250px;" src="../../public/img/4.jpeg" alt="">
+                                    <img src="../../public/img/4.jpeg" alt="">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">Y</span> Yoru</h2>
@@ -118,11 +125,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6 my-2">
+                        <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img style="width: 250px;
-                                    height: 250px;" src="../../public/img/5.jpeg" alt="sova">
+                                    <img src="../../public/img/5.jpeg" alt="sova">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">S</span> Sova</h2>
@@ -137,11 +143,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 my-2">
+                        <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img style="width: 250px;
-                                    height: 250px;" src="../../public/img/6.jpeg" alt="sage">
+                                    <img src="../../public/img/6.jpeg" alt="sage">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">S</span> Sage</h2>
