--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -45,7 +45,7 @@
                 <div class="mb-3">
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
-                <button id="buttonSubmit" type="submit" class="btn btn-primary mb-5">Login</button>
+                <button id="buttonLogin" type="submit" class="btn btn-primary mb-5">Login</button>
                 <div id="forgotPass" class="form-text"><a href="#">Forgot password?</a></div>
             </form>
             <div id="createAcc" class="form-text"><a href="signup.html">Create an account</a></div>
