Last edit -- hope so :( --

--- a/src/pages/gFeed.html
+++ b/src/pages/gFeed.html
@@ -18,10 +18,7 @@
     <div id="main_bg" class="container-fluid">
         <nav id="nav-guest" class="navbar navbar-dark navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="#">Fotobook</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="navbar-brand logo mr-1" href="#">Fotobook</a>
                 <input id="search" class="form-control me-2" type="search" placeholder="Search Photo / Album" aria-label="Search">
                 <a class="login" href="login.html">Login</a>
             </div>
