--- a/src/pages/gFeed.html
+++ b/src/pages/gFeed.html
@@ -18,11 +18,13 @@
     <div id="main_bg" class="container-fluid">
         <nav id="nav-guest" class="navbar navbar-dark navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand logo mr-1" href="#">Fotobook</a>
+                <a class="navbar-brand logo mr-1 danger d-xs" href="#">Fotobook</a>
                 <input id="search" class="form-control me-2" type="search" placeholder="Search Photo / Album" aria-label="Search">
                 <a class="login" href="login.html">Login</a>
+                
             </div>
         </nav>
+       
         <!-- <nav id="nav-user" class="navbar navbar-dark navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="#">Fotobook</a>
@@ -49,10 +51,11 @@
                         <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img src="../../public/img/1.jpeg" alt="">
+                                    <img src="../../public/img/1.png" alt="">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">J</span> Jett</h2>
+                                    <h6>Nam tempor posuere faucibus</h6>
                                     <p class="card-text">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
                                     </p>
@@ -67,10 +70,11 @@
                         <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img src="../../public/img/2.jpeg" alt="">
+                                    <img src="../../public/img/2.png" alt="">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">O</span> Omen</h2>
+                                    <h6>Nam tempor posuere faucibus</h6>
                                     <p class="card-text">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
                                     </p>
@@ -87,10 +91,11 @@
                         <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img src="../../public/img/3.jpeg" alt="">
+                                    <img src="../../public/img/3.png" alt="">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">P</span> Phoenix</h2>
+                                    <h6>Nam tempor posuere faucibus</h6>
                                     <p class="card-text">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
                                     </p>
@@ -105,10 +110,11 @@
                         <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img src="../../public/img/4.jpeg" alt="">
+                                    <img src="../../public/img/4.png" alt="">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">Y</span> Yoru</h2>
+                                    <h6>Nam tempor posuere faucibus</h6>
                                     <p class="card-text">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
                                     </p>
@@ -125,10 +131,11 @@
                         <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img src="../../public/img/5.jpeg" alt="sova">
+                                    <img src="../../public/img/5.png" alt="sova">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">S</span> Sova</h2>
+                                    <h6>Nam tempor posuere faucibus</h6>
                                     <p class="card-text">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
                                     </p>
@@ -143,10 +150,11 @@
                         <div class="col-xl-6 my-2">
                             <div id="card" class="container-fluid d-flex justify-content-around">
                                 <div class="photo-container">
-                                    <img src="../../public/img/6.jpeg" alt="sage">
+                                    <img src="../../public/img/6.png" alt="sage">
                                 </div>
                                 <div id="profile">
                                     <h2 id="name"><span id="avatar">S</span> Sage</h2>
+                                    <h6>Nam tempor posuere faucibus</h6>
                                     <p class="card-text">
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsam pariatur velit provident! Sapiente, aspernatur dignissimos! At, neque voluptatibus animi dolores dolor perspiciatis doloremque sapiente quasi unde atque ratione nihil.
                                     </p>
