--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -32,7 +32,7 @@
                 <a href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter mx-4"></i></a>
             </div>
             <form class="container pt-4">
-                <img src="../../public/img/user-login.jpg" alt="user-login">
+                <img src="../../public/img/userLogin.png" alt="user-login">
                 <div class="mt-3">
                   <input type="email" class="form-control" 
                   id="exampleInputEmail1" 
@@ -42,7 +42,7 @@
                 <div class="mb-3">
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
-                <button id="buttonLogin" type="submit" class="btn btn-primary mb-5">Login</button>
+                <button id="buttonSubmit" type="submit" class="btn btn-primary mb-5">Login</button>
                 <div id="forgotPass" class="form-text"><a href="#">Forgot password?</a></div>
             </form>
             <div id="createAcc" class="form-text"><a href="signup.html">Create an account</a></div>
